# beetle

./: .travis.yml  Cargo.toml  README.md  \  appveyor.yml  build.rs  rustfmt.toml
api/: README.txt
api/flutterbug/: Cargo.toml  README.md
api/flutterbug/examples/: draw.rs  font_text.rs  keytest.rs  simple.rs
api/flutterbug/src/: color.rs  context.rs  drawable.rs  error.rs  event.rs  image.rs  keyboard.rs  lib.rs  pixmap.rs  screen.rs  text.rs  window.rs
api/porcupine/: Cargo.toml
examples/: draw.rs  hello_world.rs  simple.rs
scripts/: manage.py
src/: arc.rs  color.rs  error.rs  ev_loop.rs  event.rs  font.rs  geometry.rs  instance.rs  keyboard.rs  lib.rs  mouse.rs  pixel_buffer.rs  ro_mmg.rs  take_vec.rs  texture.rs  utils.rs  widget.rs  wndproc.rs
src/event/: flutter.rs  mod.rs  porc.rs
src/font/: mod.rs
src/font/freetype/: error.rs  mod.rs
src/graphics/: flutter.rs  mod.rs  porc.rs
src/instance/: flutter.rs  loaded.rs  loader.rs  mod.rs  porc.rs
src/instance/internal/: flutter.rs  mod.rs  porc.rs
src/keyboard/: mod.rs  win32_keysym_table.rs  x11_keysym_table.rs
src/object/: container.rs  factory.rs  label.rs  mod.rs  textual.rs  window.rs
src/object-old/: container.rs  factory.rs  mod.rs
src/object-old/window/: child_window.rs  mod.rs
src/object-old/x11/: mod.rs  window.rs
src/object/linux/: mod.rs
src/object/linux/x11/: label.rs  mod.rs  window.rs
src/object/window/: main_window.rs  mod.rs
src/object/x11/: label.rs  mod.rs  window.rs
src/utils/: mod.rs  x11.rs
src/widget/: impls.rs  internal.rs  kind.rs  map.rs  mod.rs  reference.rs
src/win32/: mod.rs
src/window/: id.rs  mod.rs
src/window/internal/: flutter.rs  mod.rs  porc.rs
util/beetle-common/: Cargo.toml
util/beetle-common/src/: lib.rs
util/beetle-useful-macros/: Cargo.toml
util/beetle-useful-macros/src/: lib.rs
