[package]
name = "beetle"
version = "0.0.1"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
cfg-if = "0.1"
euclid = "0.20"
image = "0.23"
lazy_static = "1"
owning_ref = "0.4"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
porcupine = { path = "../porcupine" }

[target.'cfg(target_os = "linux")'.dependencies]
flutterbug = { version = "0.1" }
