[package]
name = "beetle"
version = "0.0.1"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/not-a-seagull/beetle"
description = "Graphics framework with a pull-based event system"

[dependencies]
bitflags = "1.2"
cfg-if = "0.1"
cty = "0.2.1"
euclid = "0.20"
image = { version = "0.23", optional = true }
lazy_static = "1"
log = "0.4"
hashbrown = "0.8"
maybe-uninit = "2"
# TODO: remove deadlock detector unless we need it
parking_lot = { version = "0.10", features = ["nightly", "deadlock_detection"], optional = true }
ordered-float = { version = "1.1", default-features = false}
smallvec = "1.4"
scopeguard = "1.1"
spin = "0.5"

[dev-dependencies]
env_logger = "0.7"

[target.'cfg(windows)'.dependencies]
porcupine = { version = "0.1.0" }

[target.'cfg(target_os = "linux")'.dependencies]
flutterbug = { version = "0.1.1" }

[features]
default = ["std"]
std = ["parking_lot", "image", "ordered-float/std"]

[badges]
appveyor = { repository = "not-a-seagull/beetle", branch = "master", service = "github" }
travis-ci = { repository = "not-a-seagull/beetle", branch = "master" }
